CI/CD scripts reverted to the upstream version

--- a/.arduino-ci.yml
+++ b/.arduino-ci.yml
@@ -5,11 +5,11 @@ compile:
   platforms:
     - uno
   libraries:
-    - "OneWireNg"
+    - "OneWire"
 
 # Unit testing settings
 unittest:
   platforms:
     - uno
   libraries:
-    - "OneWireNg"
+    - "OneWire"
